# rclone-gui

./: .dockerignore  .env  .env.local.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Docker.info  Dockerfile  README.md  docker-compose.yml  dockerhub-push.fish  start.sh  test-logging.sh
.github/workflows/: docker-build.yml
data/: tasks.db
data/log/: .gitkeep
src/: config_manager.rs  database.rs  main.rs  models.rs
src/handlers/: config.rs  files.rs  mod.rs  sync.rs  tasks.rs
static/: app.js  index.html
