[package]
name = "rclone-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
configparser = "3.0"
futures = "0.3"
lazy_static = "1.4"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
